--- a/BlazorChatWeb/Layout/NavMenu.razor.css
+++ b/BlazorChatWeb/Layout/NavMenu.razor.css
@@ -14,7 +14,7 @@
 .bi {
     vertical-align: middle;
     position: relative;
-    margin-right: 0.5rem;
+    margin-right: 1rem;
     top: 1px;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .nav-item {
-    font-size: 0.9rem;
+    font-size: 1rem;
     padding-bottom: 0.5rem;
 }
 
@@ -53,15 +53,20 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
-}
+    .nav-item ::deep a {
+        color: #a0d8d8;
+    }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgba(0, 128, 128, 0.5); /* teal */
+            color: #e0ffff;
+        }
+
+        .nav-item ::deep a:hover {
+            background-color: rgba(0, 128, 128, 0.2);
+            color: #e0ffff;
+        }
+
 
 @media (min-width: 641px) {
     .navbar-toggler {
